fix(card-group): pictogram card spacing

--- a/packages/styles/scss/components/card-group/_card-group.scss
+++ b/packages/styles/scss/components/card-group/_card-group.scss
@@ -90,6 +90,7 @@
         display: grid;
         grid-row: span 2;
         grid-template-rows: subgrid;
+        row-gap: 0;
       }
     }
 
